--- a/MyTwitter/MainWindow.xaml
+++ b/MyTwitter/MainWindow.xaml
@@ -32,13 +32,48 @@
 			</MenuItem>
 		</Menu>
 		<StackPanel Orientation="Horizontal" Grid.Row="1">
-			<Grid Grid.Row="1" Width="250" Margin="10,10,10,10">
+			<Grid Width="250" Margin="10,10,10,10">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition Height="Auto" />
 				</Grid.RowDefinitions>
-				<TextBlock Grid.Row="0" Name="TweetListTextBlock1" Margin="0,0,0,5" Text="タイムライン" FontSize="25" HorizontalAlignment="Center" />
-				<ListBox Grid.Row="1" Name="TweetListBox1" HorizontalAlignment="Center" Margin="10,5,10,0" Width="230" Height="480" ItemsSource="{Binding}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+				<TextBlock Grid.Row="0" Margin="0,0,0,5" Text="タイムライン" FontSize="25" HorizontalAlignment="Center" />
+				<ListBox Grid.Row="1" Name="TweetTimeLineListBox" HorizontalAlignment="Center" Margin="0,0,0,0" Width="250" Height="485"  ItemsSource="{Binding HomeTweets}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+					<ListBox.ItemTemplate>
+						<DataTemplate>
+							<StackPanel ContextMenu="{DynamicResource TweetMenu}">
+								<StackPanel Orientation="Horizontal">
+									<Image Source="{Binding User.ProfileImageUrl}" Width="50" Height="50" Stretch="Uniform"/>
+									<StackPanel>
+										<TextBlock Text="{Binding User.Name}" />
+										<StackPanel Orientation="Horizontal">
+											<TextBlock Text="@" />
+											<TextBlock Text="{Binding User.ScreenName}" />
+										</StackPanel>
+									</StackPanel>
+								</StackPanel>
+								<TextBlock Text="{Binding Text}" TextWrapping="Wrap" />
+								<StackPanel Orientation="Horizontal">
+									<TextBlock Text="{Binding RetweetCount}" />
+									<TextBlock Text=" RT " />
+									<TextBlock Text="{Binding FavoriteCount}" />
+									<TextBlock Text=" Fav" />
+								</StackPanel>
+								<TextBlock Text="{Binding CreatedAt.DateTime}" />
+							</StackPanel>
+						</DataTemplate>
+					</ListBox.ItemTemplate>
+				</ListBox>
+			</Grid>
+			<Grid Width="250" Margin="10,10,10,10">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="Auto" />
+				</Grid.RowDefinitions>
+				<TextBlock Grid.Row="0" Margin="0,0,0,5" Text="リスト" FontSize="25" HorizontalAlignment="Center" />
+				<ComboBox Grid.Row="1" Name="TweetListComboBox" SelectionChanged="TweetListComboBox_SelectionChanged" />
+				<ListBox Grid.Row="2" Name="TweetListListBox" HorizontalAlignment="Center" Margin="0,0,0,0" Width="250" Height="485" ItemsSource="{Binding ListTweets}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
 					<ListBox.ItemTemplate>
 						<DataTemplate>
 							<StackPanel ContextMenu="{DynamicResource TweetMenu}">
