--- a/MyTwitter/MainWindow.xaml
+++ b/MyTwitter/MainWindow.xaml
@@ -23,6 +23,7 @@
 			</MenuItem>
 			<MenuItem Header="操作(_A)">
 				<MenuItem Header="ツイート(_T)..." Click="TweetMenu_Click"/>
+				<MenuItem Header="Twitter検索(_S)..." Click="SearchTweetMenu_Click"/>
 			</MenuItem>
 			<MenuItem Header="オプション(_O)">
 				<MenuItem IsCheckable="True" Header="自動ログイン" />
@@ -32,7 +33,7 @@
 			</MenuItem>
 		</Menu>
 		<StackPanel Orientation="Horizontal" Grid.Row="1">
-			<Grid Width="250" Margin="10,10,10,10">
+			<Grid Width="250" Margin="10,10,5,10">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition Height="Auto" />
@@ -65,7 +66,7 @@
 					</ListBox.ItemTemplate>
 				</ListBox>
 			</Grid>
-			<Grid Width="250" Margin="10,10,10,10">
+			<Grid Width="250" Margin="5,10,5,10">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
 					<RowDefinition Height="Auto" />
@@ -74,6 +75,48 @@
 				<TextBlock Grid.Row="0" Margin="0,0,0,5" Text="リスト" FontSize="25" HorizontalAlignment="Center" />
 				<ComboBox Grid.Row="1" Name="TweetListComboBox" SelectionChanged="TweetListComboBox_SelectionChanged" Height="25" />
 				<ListBox Grid.Row="2" Name="TweetListListBox" HorizontalAlignment="Center" Margin="0,0,0,0" Width="250" Height="460" ItemsSource="{Binding ListTweets}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+					<ListBox.ItemTemplate>
+						<DataTemplate>
+							<StackPanel ContextMenu="{DynamicResource TweetMenu}">
+								<StackPanel Orientation="Horizontal">
+									<Image Source="{Binding User.ProfileImageUrl}" Width="50" Height="50" Stretch="Uniform"/>
+									<StackPanel>
+										<TextBlock Text="{Binding User.Name}" />
+										<StackPanel Orientation="Horizontal">
+											<TextBlock Text="@" />
+											<TextBlock Text="{Binding User.ScreenName}" />
+										</StackPanel>
+									</StackPanel>
+								</StackPanel>
+								<TextBlock Text="{Binding Text}" TextWrapping="Wrap" />
+								<StackPanel Orientation="Horizontal">
+									<TextBlock Text="{Binding RetweetCount}" />
+									<TextBlock Text=" RT " />
+									<TextBlock Text="{Binding FavoriteCount}" />
+									<TextBlock Text=" Fav" />
+								</StackPanel>
+								<TextBlock Text="{Binding CreatedAt.DateTime}" />
+							</StackPanel>
+						</DataTemplate>
+					</ListBox.ItemTemplate>
+				</ListBox>
+			</Grid>
+			<Grid Width="250" Margin="5,10,10,10">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="Auto" />
+				</Grid.RowDefinitions>
+				<TextBlock Grid.Row="0" Margin="0,0,0,5" Text="検索結果" FontSize="25" HorizontalAlignment="Center" />
+				<Grid Grid.Row="1" Height="25">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition />
+						<ColumnDefinition Width="40" />
+					</Grid.ColumnDefinitions>
+					<TextBox Grid.Column="0" Name="SearchTweetTextBox" />
+					<Button Grid.Column="1" Content="検索" Click="SearchTweetMenu_Click"/>
+				</Grid>
+				<ListBox Grid.Row="2" Name="SearchTweetListBox" HorizontalAlignment="Center" Margin="0,0,0,0" Width="250" Height="460" ItemsSource="{Binding ListTweets}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
 					<ListBox.ItemTemplate>
 						<DataTemplate>
 							<StackPanel ContextMenu="{DynamicResource TweetMenu}">
